# substrate-demo

./: .gitignore  Cargo.toml  docker-compose.yml  types.json
docker/: build-image.sh  build.sh  run.sh  utest.sh
node/: Cargo.toml
node/src/: chain_spec.rs  service.rs
pallets/abc-demo/: Cargo.toml  build.rs
pallets/abc-demo/src/: delegate.rs  error.rs  http.rs  lib.rs  mock.rs  storage.rs  task.rs  tests.rs
pallets/ocw-demo/: Cargo.toml
pallets/ocw-demo/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: genesis.rs  lib.rs
