[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-abc'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex = {default-features = false, version = "0.4.2"}
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false }
uuid = { version = "0.8.1", default-features = false}
sp-core = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
serde = { default-features = false, version = "1.0.101"}
alt_serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
thiserror = "1.0.22"
anyhow = { version = "1.0.34", default-features = false}
pallet-balances = { default-features = false, version = '2.0.0' }
prost = "0.6.1"
base64 = "0.12.2"

[dev-dependencies]

[build-dependencies]
prost-build = "0.6"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std'
]
